# ConccurentBuffer

./: CMakeLists.txt  bufor.c  get_memory.c  send_message_protected.c  unnamed_memory_protected.c
